Update PORTDIR and friends to upstream
- As per https://bugs.gentoo.org/378603 this is now implemented, so some
  of the locations and variables must to be modified in order to use the
  latest snapshots.

--- a/share/vboxtools/gentoo_files/root/etc/portage/make.conf
+++ b/share/vboxtools/gentoo_files/root/etc/portage/make.conf
@@ -18,11 +18,10 @@ USE="-X -cups -gtk -qt5 aspell dbus ibm icu ipv6 spell truetype udev vim-syntax 
 # set to vcpu count
 MAKEOPTS="-j4"
 
-PORTDIR="/usr/portage"
-
-# not using /usr/portage due to possible squashfs usage
-DISTDIR="/var/lib/portage/distfiles"
-PKGDIR="/var/lib/portage/packages"
+# Using standard /var locations introduced in 2019
+PORTDIR="/var/db/repos/gentoo"
+DISTDIR="/var/cache/distfiles"
+PKGDIR="/var/cache/binpkgs"
 
 # ensure buildpkg as this is a build provider
 FEATURES="${FEATURES} buildpkg"
