Configurable GENTOO_MIRRORS in make.conf
- The value will be initialized using GENTOO_MIRROR.
- Also cleaned up the variable usage in createvm-gentoo.

--- a/share/vboxtools/gentoo_files/root/etc/portage/make.conf
+++ b/share/vboxtools/gentoo_files/root/etc/portage/make.conf
@@ -7,7 +7,7 @@ CXXFLAGS="${CFLAGS}"
 
 # WARNING: Changing your CHOST is not something that should be done lightly.
 # Please consult http://www.gentoo.org/doc/en/change-chost.xml before changing.
-CHOST="x86_64-pc-linux-gnu"
+# CHOST="x86_64-pc-linux-gnu"
 
 USE="-X -cups -gtk -qt5 aspell dbus ibm icu ipv6 spell truetype udev vim-syntax xen"
 
@@ -27,8 +27,7 @@ PKGDIR="/var/cache/binpkgs"
 FEATURES="${FEATURES} buildpkg"
 
 # set mirror to the closest geographical location to this vm's host
-# GENTOO_MIRRORS=""
-GENTOO_MIRRORS="http://ftp.swin.edu.au/gentoo/"
+GENTOO_MIRRORS="{GENTOO_MIRROR}"
 
 # Apache settings
 APACHE2_MPMS="prefork"
